# periplus

./: .gitignore  ReadMe.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/periplus/: __init__.py  explorer.py  zip.py
src/periplus/static/: ReadMe.md  folder.js  user.css  viewer.js
typings/: pyvips.pyi
